tests/compile_fail/attr_skip.stderr
error[E0425]: cannot find value `NotGenerateContext` in this scope
  --> tests/compile_fail/attr_skip.rs:13:13
   |
3  | #[derive(thisctx::WithContext)]
   |          -------------------- similarly named unit struct `GenerateContext` defined here
...
13 |     let _ = NotGenerateContext;
   |             ^^^^^^^^^^^^^^^^^^
   |
help: a unit struct with a similar name exists
   |
13 |     let _ = GenerateContext;
   |             ~~~~~~~~~~~~~~~
help: consider importing this unit variant
   |
4  | use crate::Error::NotGenerateContext;
   |
